--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.AAD"
         tools:targetApi="31">
         <activity
-            android:name=".NetworkActivity"
+            android:name=".ConnectivityActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,13 +25,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".NetworkActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".SubActivity4"
             android:exported="false" />
         <activity
             android:name=".MainActivity3"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".MainActivity2"
             android:exported="true">
@@ -45,7 +47,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
